docs: update README, architecture, migration plan, and chaos engineering docs
Update all documentation to reflect the Spring Cloud Gateway migration
and Spring Boot 4.0.4 adoption across the platform.

README.md:
- Update badge to Spring Boot 4.0.4 and Spring Cloud 2025.0.0
- Update test counts (64 gateway, 75 analytics, 2,271 total)
- Add gateway routing table with service URIs
- Document reactive vs servlet-based hybrid architecture
- Update tech stack with exact versions (JUnit 6.0.0, Testcontainers 2.0.4)
- Add gateway testing section with WebFlux patterns
- Update architecture diagram description

docs/ARCHITECTURE.md:
- Rewrite high-level architecture Mermaid diagram with gateway
- Add Gateway Architecture section with component table
- Document reactive security flow (SecurityWebFilterChain)
- Add route configuration examples
- Update development status table (all phases complete)
- Update tech stack tables (separate gateway vs backend modules)
- Add actuator endpoints documentation
- Update module boundaries with communication patterns

MIGRATION_PLAN.md:
- Update executive status to 'All Modules Migrated to Spring Boot 4.0.4'
- Update test coverage table with architecture column
- Add gateway architecture section to module structure
- Reflect 2,271 total tests across 9 modules

CHAOS.md:
- Add 'Last Updated' timestamp
- Update failure scenarios matrix for gateway architecture
- Rewrite Scenario 1 (Auth Service Offline) for gateway routing
- Update test commands to use gateway actuator endpoints