@@ -1,12 +1,12 @@
 # NeoBank
 
-> Next-generation digital banking platform with modular microservices architecture.
+> Next-generation digital banking platform with reactive API gateway and modular microservices architecture.
 
 [![Java CI](https://github.com/anisul-islam-prog/neobank-core/actions/workflows/ci.yml/badge.svg)](https://github.com/anisul-islam-prog/neobank-core/actions)
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
 [![Java 25](https://img.shields.io/badge/Java-25-blue.svg)](https://adoptium.net)
-[![Spring Boot 4](https://img.shields.io/badge/Spring%20Boot-4-brightgreen.svg)](https://spring.io/projects/spring-boot)
-[![Tests: 2,422](https://img.shields.io/badge/Tests-2,422-brightgreen.svg)](MIGRATION_PLAN.md)
+[![Spring Boot 4.0.4](https://img.shields.io/badge/Spring%20Boot-4.0.4-brightgreen.svg)](https://spring.io/projects/spring-boot)
+[![Spring Cloud 2025.0.0](https://img.shields.io/badge/Spring%20Cloud-2025.0.0-orange.svg)](https://spring.io/projects/spring-cloud)
 
 ---
 
@@ -16,7 +16,7 @@
 # Start infrastructure
 docker-compose --profile dev up -d
 
-# Run backend
+# Run backend (all modules)
 mvn spring-boot:run
 
 # Run frontend (retail)
@@ -27,25 +27,26 @@ cd apps/retail-app && npm install && npm run dev
 - Retail App: http://localhost:3000
 - Staff Portal: http://localhost:3001
 - Admin Console: http://localhost:3002
-- API: http://localhost:8080
+- API Gateway: http://localhost:8080
+- Swagger UI: http://localhost:8080/swagger-ui.html
 
 ---
 
 ## ✅ Backend Test Coverage
 
-All 9 backend modules have comprehensive test suites with **2,422 total tests**:
+All 9 backend modules have comprehensive test suites:
 
-| Module | Tests | Status |
-|--------|-------|--------|
-| neobank-gateway | 158 | ✅ Complete |
-| neobank-auth | 286 | ✅ Complete |
-| neobank-onboarding | 280 | ✅ Complete |
-| neobank-core-banking | 428 | ✅ Complete |
-| neobank-lending | 410 | ✅ Complete |
-| neobank-cards | 372 | ✅ Complete |
-| neobank-batch | 118 | ✅ Complete |
-| neobank-analytics | 112 | ✅ Complete |
-| neobank-fraud | 258 | ✅ Complete |
+| Module | Tests | Status | Architecture |
+|--------|-------|--------|--------------|
+| neobank-gateway | 64 | ✅ Complete | Reactive WebFlux + Spring Cloud Gateway |
+| neobank-auth | 286 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-onboarding | 280 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-core-banking | 428 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-lending | 410 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-cards | 372 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-batch | 98 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-analytics | 75 | ✅ Complete | Servlet-based Spring Modulith |
+| neobank-fraud | 258 | ✅ Complete | Servlet-based Spring Modulith |
 
 ### Run All Tests
 
@@ -57,7 +58,7 @@ All 9 backend modules have comprehensive test suites with **2,422 total tests**:
 ./verify-backend.sh --verbose
 
 # Run specific module
-./verify-backend.sh --module neobank-auth
+./verify-backend.sh --module neobank-gateway
 ```
 
 ### Run Tests with Maven
@@ -67,28 +68,19 @@ All 9 backend modules have comprehensive test suites with **2,422 total tests**:
 mvn clean test
 
 # Run tests for specific module
-mvn test -pl neobank-auth
-mvn test -pl neobank-onboarding
-mvn test -pl neobank-core-banking
-mvn test -pl neobank-lending
-mvn test -pl neobank-cards
-mvn test -pl neobank-batch
-mvn test -pl neobank-analytics
-mvn test -pl neobank-fraud
 mvn test -pl neobank-gateway
+mvn test -pl neobank-auth
+mvn test -pl neobank-analytics
 
 # Run specific test class
-mvn test -pl neobank-auth -Dtest=AuthServiceTest
-mvn test -pl neobank-auth -Dtest=JwtServiceTest
-mvn test -pl neobank-onboarding -Dtest=OnboardingServiceTest
+mvn test -pl neobank-gateway -Dtest=SecurityConfigTest
+mvn test -pl neobank-analytics -Dtest=TransferEventHandlerTest
 
 # Run with coverage
-mvn clean test -DargLine="-Dnet.bytebuddy.experimental=true"
+mvn clean test -DargLine="-Dnet.bytebuddy.experimental=true --sun-misc-unsafe-memory-access=allow"
 ```
 
 ### Test Structure
-
-Each module follows standardized test patterns:
 
 ```
 [module]/src/test/
@@ -96,10 +88,12 @@ Each module follows standardized test patterns:
 │   ├── internal/
 │   │   ├── [Service]Test.java          # Unit tests (@ExtendWith(MockitoExtension))
 │   │   ├── [Entity]Test.java           # Entity state tests
-│   │   └── [Repository]IntegrationTest.java # @DataJpaTest + Testcontainers
+│   │   └── [Repository]IntegrationTest.java # @SpringBootTest + Testcontainers
 │   ├── web/
 │   │   └── [Controller]WebMvcTest.java # @WebMvcTest with security
-│   └── [Record/Enum]Test.java          # Record/enum tests
+│   └── config/
+│       ├── SecurityConfigTest.java     # Security configuration tests
+│       └── RateLimitingFilterTest.java # Filter tests (WebFlux or Servlet)
 └── resources/
     └── application-test.yml            # Testcontainers config
 ```
@@ -145,11 +139,11 @@ Each module follows standardized test patterns:
 
 ## 🏗️ Architecture
 
-NeoBank uses a **Modular Monolith** architecture with Spring Modulith:
+NeoBank uses a **hybrid architecture**: a reactive Spring Cloud Gateway proxy routing to servlet-based Spring Modulith microservices.
 
 ```
 neobank-parent/
-├── neobank-gateway/        # API Gateway, Rate Limiting, Security
+├── neobank-gateway/        # Reactive API Gateway (Spring Cloud Gateway + WebFlux)
 ├── neobank-auth/           # Authentication (schema_auth)
 ├── neobank-onboarding/     # KYC & User Status (schema_onboarding)
 ├── neobank-core-banking/   # Accounts, Transfers (schema_core)
@@ -159,36 +153,52 @@ neobank-parent/
 └── neobank-analytics/      # BI & CQRS (schema_analytics)
 ```
 
+### Gateway Routing
+
+The gateway acts as a reactive proxy, routing requests to downstream services:
+
+| Route Pattern | Downstream Service | Default URI |
+|---------------|-------------------|-------------|
+| `/api/auth/**` | neobank-auth | http://localhost:8081 |
+| `/api/onboarding/**` | neobank-onboarding | http://localhost:8082 |
+| `/api/accounts/**`, `/api/transfers/**` | neobank-core-banking | http://localhost:8083 |
+| `/api/loans/**` | neobank-lending | http://localhost:8084 |
+| `/api/cards/**` | neobank-cards | http://localhost:8085 |
+
 ### Key Features
+- **Reactive Gateway**: Spring Cloud Gateway with WebFlux for non-blocking I/O
 - **Schema Isolation**: Each module has its own database schema
 - **Event-Driven**: Spring Modulith events for cross-module communication
 - **Maker-Checker**: Dual authorization for high-value operations
 - **CQRS**: Read-optimized BI tables for analytics
-- **Circuit Breakers**: Resilience4j for fault tolerance
-- **Rate Limiting**: Bucket4j for API protection
+- **Circuit Breakers**: Resilience4j for fault tolerance with fallback endpoints
+- **Rate Limiting**: Reactive Bucket4j for API protection
+- **Trace Propagation**: Micrometer tracing headers on all responses
 
 ---
 
 ## 🔒 Security
 
+- **Gateway**: Reactive SecurityWebFilterChain with JWT resource server
+- **Modules**: Servlet-based SecurityFilterChain with JWT validation
 - JWT authentication with audience claims (retail/staff/admin)
 - BCrypt password hashing
 - AES-256-GCM card encryption
 - Role-Based Access Control (8 roles)
 - Maker-Checker protocol for sensitive operations
 - CORS policies (3 specific frontend domains only)
-- CSRF protection with secure cookies
+- CSRF protection with secure cookies (CookieServerCsrfTokenRepository)
 - HttpOnly, Secure, SameSite=Strict cookies
 - API rate limiting (5-500 req/min based on user type)
 
 ---
 
-## 🛡️ Resilience & Fault Tolerance (Phase 7)
+## 🛡️ Resilience & Fault Tolerance
 
 ### Circuit Breakers
-- Automatic failure detection and recovery
-- Configurable thresholds per module
-- Fallback mechanisms for graceful degradation
+- Automatic failure detection and recovery per service route
+- Configurable thresholds (50% failure rate, 30s recovery)
+- Fallback endpoints for graceful degradation (`/fallback/*`)
 
 ### Rate Limiting
 | User Type | Limit | Window |
@@ -197,6 +207,11 @@ neobank-parent/
 | Staff Users | 500 requests | per minute |
 | Public Registration | 5 requests | per minute |
 | Unauthenticated (IP) | 60 requests | per minute |
+
+### Retry Configuration
+- 2 retries per route on 503 Service Unavailable
+- Exponential backoff between retries
+- Applied to GET, POST, PUT, DELETE, PATCH methods
 
 ### Bulkhead Pattern
 - Critical path isolation (transfers, auth)
@@ -222,6 +237,21 @@ neobank-parent/
 ./test-all.sh --skip-e2e       # Skip E2E tests
 ```
 
+### Gateway Testing
+
+The gateway uses WebFlux testing patterns:
+
+```bash
+# Run gateway tests
+mvn test -pl neobank-gateway
+
+# Run specific test classes
+mvn test -pl neobank-gateway -Dtest=SecurityConfigTest
+mvn test -pl neobank-gateway -Dtest=RateLimitingFilterTest
+mvn test -pl neobank-gateway -Dtest=TracePropagationFilterTest
+mvn test -pl neobank-gateway -Dtest=CookieSecurityConfigTest
+```
+
 ### Continuous Integration
 
 Our CI pipeline runs on every push and PR:
@@ -245,11 +275,14 @@ Our CI pipeline runs on every push and PR:
 
 ## 🛠️ Tech Stack
 
-**Backend:** Java 25 · Spring Boot 4 · Spring Modulith · PostgreSQL · Liquibase · Resilience4j · Bucket4j
+**Gateway:** Java 25 · Spring Boot 4.0.4 · Spring Cloud Gateway 2025.0.0 · WebFlux · Reactive Security
+**Backend Modules:** Java 25 · Spring Boot 4.0.4 · Spring Modulith 1.4.0 · Spring Security 7.0.0
+**Data:** PostgreSQL 17 · Liquibase 4.29.0 · Hibernate 7.2 · JPA
+**Resilience:** Resilience4j 2.3.0 · Bucket4j 8.6.0
 **Frontend:** Next.js 14 · React · TypeScript · Tailwind CSS · Recharts
-**AI:** Spring AI · Ollama (local) · OpenAI (cloud)
-**Testing:** JUnit 5 · Testcontainers · Vitest · Playwright
-**Observability:** Micrometer · Prometheus · Grafana · OpenTelemetry
+**AI:** Spring AI 2.0.0-M1 · Ollama (local) · OpenAI (cloud)
+**Testing:** JUnit 6.0.0 · Testcontainers 2.0.4 · Mockito 5.15.2 · AssertJ 3.27.3
+**Observability:** Micrometer 1.16.4 · Prometheus · Grafana · OpenTelemetry 1.46.0
 
 ---
 
@@ -259,4 +292,4 @@ NeoBank is open-source under the [MIT License](LICENSE).
 
 ---
 
-**Built with ❤️ using Java 25 and Spring Boot 4**
+**Built with ❤️ using Java 25, Spring Boot 4.0.4, and Spring Cloud Gateway**
